solc_ossfuzz_seed_corpus/test_sol/test_9ec644f17d1a05ba5c33be8bdff692bfe6ccf288174b23a676355bf156f0ec3e_e76e825a84e8715a2d1a638045828a5a2a13134b_sol.sol
==== Source:  ====

==== Source: su0.sol ====
struct St0 {
  function (uint176) external   returns (string[1] memory) el0;
  bool el1;
  bool el2;
  bytes el3;
}
pragma solidity >= 0.0.0;
contract C0 {
  error er0(bytes32 ep0);
  string   s0 = "ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff";
  modifier m0() virtual
  {
    revert("0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000");
    _;
  }
  modifier m1() 
  {
    revert("0000000000000000000014d23f1ce22ae5");
    _;
  }
  event ev0(function (int256, St0 memory) external   returns (bytes6[2][1] memory)  ep0);
  function f0(int104 i0,function () external   returns (address payable[] memory, int104) i1) internal    returns(int72 o0,string memory o1)
  {
    while (((int40(-184217665255) | (int40(0) % (int40(-75650332228) + int40(-35789420151)))) != int40(-251891024683)))
    {
      if ((true || (true || (true && true))))
      {
        break;
        continue;
        (bool l0, bytes memory l1) = address(this).call("00000000000000000000000000ffffffffffffffffffffffff");
      }
      else
      {
        if ((bytes19(0x6cdaa15a2c2c31ccc7dcc4434e98edacede3d9) < bytes19(0x31ecdb7d8e16c94c153e1aae66c0e25c65ea91)))
        {
        }
        (bool l2, bytes memory l3) = address(this).call("82493d5fe43e424987876a39807ce249a65ee484ae539841ebcaf72a92f869bbb112a466b679153ce5ee54c340");
      }
    }
    while (false)
    {
      continue;
      (bool l4, bytes memory l5) = address(this).call(bytes("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"));
    }
    return (((((~(int72(2361183241434822606847))) ** uint144(uint144((uint144(21851831686397462964104020114830111183113083) / uint144(0))))) + int72(0)) ^ int72(2119754954916609847549)), "0000000000000000000000000000000000000000000000000000000000bc776f6c68abe6fe44673a51ee79e420dfbd");
  }
  error er1();
  modifier m2(uint152 i0) virtual
  {
    if ((true ? true : true))
    {
      _;
    }
    assembly
    {
      mstore(mod(i0, 2048), s0)
    }
  }
  modifier m3(uint64 i0) virtual
  {
    if (false)
    {
      _;
    }
    else if ((true && false))
    {
      _;
      (s0) = ("76082322187e8a2beeec00");
    }
  }
}
contract C1 {
  bool  public s1 = true;
  receive() external virtual  payable
  {
  }
  function f2(bool i0,function (bytes19, address payable, uint152) external   i1) public   
  {
  }
  modifier m4() 
  {
    payable(this).transfer(4481591811033886313);
    _;
  }
  modifier m5(uint200 i0) 
  {
    (bool l0, bytes memory l1) = payable(this).call{value: 11286539922932497830}("");
    _;
  }
  modifier m6() virtual
  {
    require(false);
    _;
    _;
  }
  function f3(bytes27 i0,int216[2] calldata i1) external virtual m4() payable returns(uint56 o0)
  {
  }
}
// ----
// Warning 3149: (su0.sol:1592-1716): The result type of the exponentiation operation is equal to the type of the first operand (int72) ignoring the (larger) type of the second operand (uint144) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// TypeError 1408: (su0.sol:2018-2020): Only local variables are supported. To access storage variables, use the ".slot" and ".offset" suffixes.
